# fast_api

./: README.md  connection.py  db.sql  dockerfile  exception_tool.py  log_setting.py  main.py  models.py  pyproject.toml  requirements.txt  token_api.py  tools.py
.github/workflows/: depoly.yml
routes/: hi.py  raw_material.py  store.py  user.py
